# hail-mary

./: .gitignore  DESIGN.md  EXPERIMENT1.md  GEMINI.md  README.md  campaign.yaml  pyproject.toml
experiments/: baseline_contact.yaml  scientific_contact.yaml  test_mock.yaml
gemini/: gemini_auth.py  gemini_client.py
hail_mary/: agents.py  campaign.py  mission.py  protocol.py
logs/: campaign_log_20260212_212257.json  campaign_log_20260212_213945.json
plans/: web-command-deck.md
src/gemini/: exceptions.py
src/hail_mary/: agents.py  analyze.py  campaign.py  channel.py  environment.py  loader.py  main.py  mission.py  protocol.py  tui.py
src/hail_mary/llm/: base.py  clients.py  gemini_wrapper.py
tests/: test_integration.py  test_simulation.py  test_tui.py
