[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alien-talk"
version = "0.1.0"
description = "A Python project for alien communication."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = []
requires-python = ">=3.8"
