[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hail-mary"
version = "0.1.0"
description = "Project Hail Mary: AI Xeno-Communication Simulation"
authors = [
    {name = "Erwin Jansen", email = "jansene@google.com"},
]
dependencies = [
    "PyYAML",
    "openai",
    "anthropic",
    "rich",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
hail-mary = "hail_mary.main:main"

[tool.setuptools.packages.find]
where = ["src"]
